# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  readme.md  tasks.py
Dokumentaatio/: Kayttoohje.md  Testausdokumentti.md  Työaikakirjanpito  Työaikakirjanpito.md  arkkitehtuuri.md  changelog.md  vaatimuusmaarittely.md
laskarit/Viikko2/maksukortti/: pyproject.toml
laskarit/Viikko2/maksukortti/src/: maksukortti.py  maksukortti_test.py
laskarit/Viikko2/poetry-testi/: pyproject.toml
laskarit/Viikko2/unicafe/: .coverage
laskarit/Viikko2/unicafe/htmlcov/: d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  index.html  status.json
laskarit/viikko1/: README.md  gitlog.txt  komentorivi.txt
laskarit/viikko3/: laajempi_sekvenssikaavio.md  laajennettu_monopoli.md  monopoli.md  sekvenssikaavio.md
src/: controls.py  database_connection.py  game.py  gamedata.py  highscores.txt  initialize_database.py  jump_bar.py  levels.py  levels_2.py  levels_2_graphic.py  login_menu.py  menu.py  monster.py  player.py  scores.py  settings.py  test_main_game.py  tiles.py  user_repository.py
src/data/: database.db  database_test.db
src/database/: database_connection.py  initialize_database.py  scores.py  user_repository.py
src/not_in_use/: game_2  levels.py
src/services/: game.py  levels_2.py  settings.py
src/tests/: database_test.py  levels_test.py  liike_test.py
src/turha/: controls.py  login_menu.py  monster.py  player.py  scores.py  test_main_game.py
src/ui/: levels_2_graphic.py  login_menu.py  menu.py  tiles.py
(+2 files in other folders)
