[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = "Testi"
authors = ["Aarni <aarni.miikkulainen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
